--- a/less/layout.less
+++ b/less/layout.less
@@ -5,10 +5,10 @@
 pre { border:0; background:none; padding:0; margin:0; }
 
 /* **************************************************************** */
-/* Left Rail 									
+/* Left Rail
 /* **************************************************************** */
 .left_rail {
-	background:rgba(0, 0, 0, 0.6);		
+	background:rgba(0, 0, 0, 0.6);
 	color:@white;
 	font-family:@josefin;
 	font-size:20px;
@@ -20,14 +20,14 @@ pre { border:0; background:none; padding:0; margin:0; }
 	width:20%;
 	z-index:1000;
 	a {
-		color:@white;					
-	}	
+		color:@white;
+	}
 	.logo {
 		margin:0 0 100px;
 		a {
 			background:url('../img/logo.png') top center no-repeat;
-			background-size:100px 100px;	
-			border-bottom:1px solid @super_light_grey;		
+			background-size:100px 100px;
+			border-bottom:1px solid @super_light_grey;
 			color:@super_lighter_grey;
 			display:block;
 			font-size:22px;
@@ -42,11 +42,11 @@ pre { border:0; background:none; padding:0; margin:0; }
 		}
 	}
 	ul {
-		.ul_list;		
+		.ul_list;
 		margin:0 0 100px;
 		li {
 			a {
-				color:@super_lighter_grey;	
+				color:@super_lighter_grey;
 			}
 		}
 	}
@@ -56,36 +56,36 @@ pre { border:0; background:none; padding:0; margin:0; }
 		left:0;
 		width:100%;
 		margin:0 0 80px;
-		font-size:14px;	
+		font-size:14px;
 		.social {
-			border-top:1px solid @super_light_grey;			
+			border-top:1px solid @super_light_grey;
 			margin:0 30px;
-			padding:20px 0 0;	
+			padding:20px 0 0;
 			a {
 				color:@white;
-				padding-left:6px;	
+				padding-left:6px;
 			}
 		}
 	}
 }
 
 /* **************************************************************** */
-/* Main 									
+/* Main
 /* **************************************************************** */
-.main {	
+.main {
 	color:@grey;
 	font-size:20px;
-	section {		
+	section {
 		padding:0 0 0 20%;
 		&.white {
-			background:@white;	
+			background:@white;
 		}
 		&.home {
 			color:@white;
 			font-family:@open_sans;
-			font-style:italic;	
+			font-style:italic;
 			font-weight:300;
-			font-size:18px;			
+			font-size:18px;
 			margin:0 0 0 20%;
 			padding:0;
 			.quote {
@@ -93,35 +93,53 @@ pre { border:0; background:none; padding:0; margin:0; }
 				text-align:center;
 				margin:0 auto;
 				span {
-					display:block;	
+					display:block;
 				}
 				.script {
 					color:#B49F8E;
 					font-family:@dancing_script;
-					font-size:60px;	
+					font-size:60px;
 					padding:10px 0;
 					text-align:right;
 				}
 				.author {
 					font-style:normal;
-					text-align:right;	
+					text-align:right;
 				}
 			}
 		}
 		&.services {
-			p {
-				width:1000px;
-				margin:0 auto 30px;	
+			._inner {
+				background: @darker_grey;
+		    margin: 15%;
+		    padding: 3%;
+		    font-size: 15px;
+		    opacity: .90;
+				p {
+					margin: 0 auto 20px;
+					color: @white;
+					line-height: normal;
+					text-align: left;
+				}
 			}
 		}
 		&.about {
-			p {
-				width:1000px;
-				margin:0 auto 30px;	
+			._inner {
+				background: @darker_grey;
+		    margin: 15%;
+		    padding: 3%;
+		    font-size: 15px;
+		    opacity: .90;
+				p {
+					margin: 0 auto 20px;
+					color: @white;
+					line-height: normal;
+					text-align: left;
+				}
 			}
 		}
 		&.portfolio {
-			padding:0;
+
 			.portfolio_outer {
 				position:relative;
 				._nav {
@@ -129,53 +147,73 @@ pre { border:0; background:none; padding:0; margin:0; }
 					position:absolute;
 					top:20px;
 					right:20px;
-					z-index:100;	
+					z-index:100;
 					span {
 						display:inline-block;
-						padding:0 10px;	
+						padding:0 10px;
 					}
 					a {
 						color:@super_light_grey;
-					}	
+					}
 				}
 				.portfolio_item {
-					background-size:cover;					
+					background-size:cover;
 					position:absolute;
 					top:0;
 					left:0;
 				}
 			}
-		}	
+			.container {
+				margin: 0;
+		    padding: 5%;
+		    width: 100%;
+			}
+		}
 		&.contact {
 			.form_outer {
-				overflow:hidden;
-				width:900px;	
-				padding:50px;
-				margin:0 auto;
-				background:@super_lighter_grey;
+				font-family: 'Open Sans', sans-serif;
+		    font-weight: 300;
+		    font-size: 15px;
+		    overflow: hidden;
+		    width: 900px;
+		    padding: 50px;
+		    margin: 10% auto;
+		    background: @darker_grey;
+		    color: @white;
 				._info {
-					float:left;	
-					width:40%;
+					font-style: italic;
+			    float: left;
+			    width: 40%;
+			    padding-right: 8%;
+			    text-align: right;
+					p {
+						line-height: 21px;
+					}
+					p > a {
+						color: inherit;
+						text-decoration: underline;
+						font-weight: 300;
+					}
 				}
 				._form {
-					float:right;	
-					width:60%;	
+					float:right;
+					width:60%;
+					text-align: left;
 					._row {
 						margin:0 0 20px;
 						&:last-child {
-							margin:0;	
+							margin:0;
 						}
 					}
 				}
 			}
-		}			
-					
+		}
+
 		._inner {
-			padding:20px 0 0;
-			text-align:center;	
+			padding: 20px 0 0;
+			text-align: center;
 		}
 	}
-	
 }
 
 /* **************************************************************** */
@@ -187,11 +225,54 @@ pre { border:0; background:none; padding:0; margin:0; }
 	bottom:0;
 	left:0;
 	background:@black;
-	color:@darkest_grey; 
+	color:@darkest_grey;
 	text-align:right;
 	height:60px;
 	line-height:60px;
 	width:100%;
 	padding:0 20px 0 0;
 	z-index:1000;
+}
+
+/* **************************************************************** */
+/* Bootstrap Overrides
+/* **************************************************************** */
+/** modal **/
+.modal-dialog {
+	height: 60%;
+	margin-top: 8%;
+}
+
+.modal-content {
+	border-radius: 0;
+}
+
+.modal-body {
+	padding: 0;
+
+	.thumbnail {
+		max-height: 500px;
+		width: 100%;
+		padding: 0;
+		margin-bottom: 0;
+	}
+}
+
+.thumbnail {
+	width: 150px;
+	height: 120px;
+	padding: 0px;
+	border-radius: 0;
+	border: 0;
+}
+/** Form **/
+.form-control {
+  border-radius: 0;
+}
+
+.btn-default {
+  border-radius: 0;
+  width: 120px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
