Updated img modal size

--- a/less/layout.less
+++ b/less/layout.less
@@ -163,10 +163,48 @@ pre { border:0; background:none; padding:0; margin:0; }
 					left:0;
 				}
 			}
+
 			.container {
 				margin: 0;
 		    padding: 5%;
 		    width: 100%;
+			}
+
+			/** modal **/
+			.modal-dialog {
+				height: 60%;
+				margin-top: 8%;
+			}
+
+			.modal-content {
+				border-radius: 0;
+			}
+
+			.modal-body {
+				padding: 0;
+
+				#modal-carousel {
+					padding: 0;
+					.thumbnail {
+						height: auto;
+						//width: auto;
+						width: 100%;
+						max-height: 500px;
+						padding: 0;
+						margin-bottom: 0;
+						border: 0;
+						border-radius: 0;
+					}
+				}
+			}
+			.gallery {
+				.thumbnail {
+					width: 150px;
+					height: 120px;
+					padding: 0px;
+					border-radius: 0;
+					border: 0;
+				}
 			}
 		}
 		&.contact {
@@ -237,34 +275,7 @@ pre { border:0; background:none; padding:0; margin:0; }
 /* **************************************************************** */
 /* Bootstrap Overrides
 /* **************************************************************** */
-/** modal **/
-.modal-dialog {
-	height: 60%;
-	margin-top: 8%;
-}
 
-.modal-content {
-	border-radius: 0;
-}
-
-.modal-body {
-	padding: 0;
-
-	.thumbnail {
-		max-height: 500px;
-		width: 100%;
-		padding: 0;
-		margin-bottom: 0;
-	}
-}
-
-.thumbnail {
-	width: 150px;
-	height: 120px;
-	padding: 0px;
-	border-radius: 0;
-	border: 0;
-}
 /** Form **/
 .form-control {
   border-radius: 0;
