Updated thumnail galary

--- a/less/layout.less
+++ b/less/layout.less
@@ -198,9 +198,14 @@ pre { border:0; background:none; padding:0; margin:0; }
 				}
 			}
 			.gallery {
+				background: @darker_grey;
+				opacity: .95;
+				width: 80%;
+    		margin: 10%;
+
 				.thumbnail {
 					width: 150px;
-					height: 120px;
+					height: 105px;
 					padding: 0px;
 					border-radius: 0;
 					border: 0;
@@ -286,4 +291,9 @@ pre { border:0; background:none; padding:0; margin:0; }
   width: 120px;
   padding-top: 5px;
   padding-bottom: 5px;
+}
+
+.modal-backdrop {
+   background-color: black;
+	 opacity: 1;
 }
