--- a/less/layout.less
+++ b/less/layout.less
@@ -178,6 +178,7 @@ pre { border:0; background:none; padding:0; margin:0; }
 
 			.modal-content {
 				border-radius: 0;
+				border: 0;
 			}
 
 			.modal-body {
@@ -202,6 +203,7 @@ pre { border:0; background:none; padding:0; margin:0; }
 				opacity: .95;
 				width: 80%;
     		margin: 10%;
+				padding: 2%;
 
 				.thumbnail {
 					width: 150px;
@@ -209,6 +211,8 @@ pre { border:0; background:none; padding:0; margin:0; }
 					padding: 0px;
 					border-radius: 0;
 					border: 0;
+					margin-top: 10px;
+    			margin-bottom: 10px;
 				}
 			}
 		}
