--- a/css/style.css
+++ b/css/style.css
@@ -406,6 +406,7 @@ pre {
 }
 .main section.portfolio .modal-content {
   border-radius: 0;
+  border: 0;
 }
 .main section.portfolio .modal-body {
   padding: 0;
@@ -427,6 +428,7 @@ pre {
   opacity: .95;
   width: 80%;
   margin: 10%;
+  padding: 2%;
 }
 .main section.portfolio .gallery .thumbnail {
   width: 150px;
@@ -434,6 +436,8 @@ pre {
   padding: 0px;
   border-radius: 0;
   border: 0;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 .main section.contact .form_outer {
   font-family: 'Open Sans', sans-serif;
