--- a/less/general.less
+++ b/less/general.less
@@ -51,7 +51,7 @@ h1 {
 	}
 }
 h2 {
-	font-size:40px;
+	font-size:32px;
 	font-weight:300;
 	margin:0 0 20px;
 	color:@white;
@@ -59,6 +59,13 @@ h2 {
 		margin:0 0 50px;
 	}
 }
+h3 {
+	font-size: 18px;
+}
+p {
+	font-size: 13px;
+}
+
 @media (max-width: 640px) {
 	h2 {
 		font-size:24px;
