--- a/less/general.less
+++ b/less/general.less
@@ -5,6 +5,7 @@
 	padding:0;
 	-webkit-font-smoothing: antialiased;
 }
+
 html, body {
 	height:100%;
   	min-height:100%;
@@ -18,11 +19,34 @@ body {
 	line-height:normal;
 	position:relative;
 }
-@media (max-width: 640px) {
+
+@media @mobile {
 	body {
-		padding-top:93px;
+		padding-top:0;
 	}
 }
+@media @x-small {
+	body {
+		padding-top:0;
+	}
+}
+@media @tablet {
+	body {
+		padding-top: 0;
+	}
+}
+@media @desktop {
+	body {
+		padding-top: 0;
+	}
+}
+@media @desktop-xl {
+	body {
+		padding-top: 0;
+	}
+}
+
+
 h1, h2, h3, h4 {
 	color:@grey;
 	font-family:@open_sans;
