Updated padding for mobile

--- a/less/layout.less
+++ b/less/layout.less
@@ -345,6 +345,24 @@ pre { border:0; background:none; padding:0; margin:0; }
 	}
 }
 
+@media @mobile {
+	.main section {
+		padding: 0;
+	}
+}
+@media @x-small {
+	.main section {
+	 padding: 0;
+	}
+}
+@media @tablet {
+	.main section {
+		padding: 0;
+	}
+}
+
+
+
 /* **************************************************************** */
 /* Footer
 /* **************************************************************** */
