--- a/css/style.css
+++ b/css/style.css
@@ -571,6 +571,21 @@ pre {
     margin: 0;
   }
 }
+@media only screen and (max-width: 320px) {
+  .main section {
+    padding: 0;
+  }
+}
+@media only screen and (min-width: 321px) and (max-width: 480px) {
+  .main section {
+    padding: 0;
+  }
+}
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+  .main section {
+    padding: 0;
+  }
+}
 /* **************************************************************** */
 /* Footer
 /* **************************************************************** */
