--- a/less/layout.less
+++ b/less/layout.less
@@ -271,8 +271,8 @@ pre { border:0; background:none; padding:0; margin:0; }
 				padding: 2%;
 
 				.thumbnail {
-					width: 150px;
-					height: 105px;
+					//width: 150px;
+					//height: 105px;
 					padding: 0px;
 					border-radius: 0;
 					border: 0;
