--- a/less/navigation.less
+++ b/less/navigation.less
@@ -58,6 +58,12 @@
         font-family:@josefin;
         font-size: 21px;
         font-weight:300;
+        padding: 18px 15px;
+      }
+      .icon {
+        height: 22px;
+        padding-right: 10px;
+        margin-top: -7px;
       }
     }
 
