--- a/css/style.css
+++ b/css/style.css
@@ -431,6 +431,34 @@ pre {
   height: 25%;
   margin-left: 5%;
 }
+.main section.about ._inner .profile-img-sm {
+  width: 40%;
+}
+@media only screen and (max-width: 320px) {
+  .main section.about ._inner .media-object.profile-img {
+    display: none;
+  }
+}
+@media only screen and (min-width: 321px) and (max-width: 480px) {
+  .main section.about ._inner .media-object.profile-img {
+    display: none;
+  }
+}
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+  .main section.about ._inner .media-object.profile-img {
+    display: none;
+  }
+}
+@media only screen and (min-width: 769px) and (max-width: 992px) {
+  .main section.about ._inner .profile-img-sm {
+    display: none;
+  }
+}
+@media only screen and (min-width: 993px) {
+  .main section.about ._inner .profile-img-sm {
+    display: none;
+  }
+}
 .main section.projects ._inner {
   background: #666666;
   margin: 10%;
@@ -715,6 +743,12 @@ pre {
   font-family: 'Josefin Sans', sans-serif;
   font-size: 21px;
   font-weight: 300;
+  padding: 18px 15px;
+}
+.navbar-default .navbar-header .icon {
+  height: 22px;
+  padding-right: 10px;
+  margin-top: -7px;
 }
 .navbar-default .navbar-nav > li > a {
   color: #ffffff;
