--- a/less/layout.less
+++ b/less/layout.less
@@ -379,6 +379,43 @@ pre { border:0; background:none; padding:0; margin:0; }
 					}
 				}
 			}
+			@media @mobile {
+				.form_outer  {
+					padding: 7%;
+					._info {
+						width:100%;
+					}
+					._form {
+							width:100%;
+					}
+				}
+			}
+			@media @x-small {
+				.form_outer  {
+					padding: 7%;
+					._info {
+						width:100%;
+					}
+					._form {
+							width:100%;
+					}
+				}
+			}
+			@media @tablet {
+				.form_outer  {
+					padding: 7%;
+					._info {
+						width:100%;
+					}
+					._form {
+							width:100%;
+					}
+				}
+			}
+			@media @desktop {
+			}
+			@media @desktop-xl {
+			}
 		}
 
 		._inner {
