updated toggle hover

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -65,6 +65,12 @@
         padding-right: 10px;
         margin-top: -7px;
       }
+      .navbar-toggle {
+        background:rgba(0, 0, 0, 0.77);
+        &:hover, &:focus {
+          background:rgba(0, 0, 0, 0.77);
+        }
+      }
     }
 
     .navbar-nav > li > a {
