--- a/css/style.css
+++ b/css/style.css
@@ -783,6 +783,13 @@ pre {
   padding-right: 10px;
   margin-top: -7px;
 }
+.navbar-default .navbar-header .navbar-toggle {
+  background: rgba(0, 0, 0, 0.77);
+}
+.navbar-default .navbar-header .navbar-toggle:hover,
+.navbar-default .navbar-header .navbar-toggle:focus {
+  background: rgba(0, 0, 0, 0.77);
+}
 .navbar-default .navbar-nav > li > a {
   color: #ffffff;
 }
