--- a/less/general.less
+++ b/less/general.less
@@ -6,13 +6,18 @@
 	-webkit-font-smoothing: antialiased;
 }
 
-html, body {
-	height:100%;
-  	min-height:100%;
+html {
+	height: 100vh; /* set viewport constraint */
+	min-height: 100%; /* enforce height */
 }
+
 body {
-	background:url('../img/bg.jpg') top center no-repeat fixed;
-	background-size:cover;
+	background: url('../img/bg.jpg') no-repeat fixed top center;
+	background-size: cover;
+	-webkit-background-size: cover; /* safari may need this */
+	//height:100%;
+	//min-height:100%;
+
 	color:#666666;
 	font-family:@open_sans;
 	font-size:100%;
